--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 {deps_dirs, ["deps"]}.
 {deps, [
 	 {meck, ".*", {git, "git://github.com/eproxus/meck.git", "master"}},
-	 {lager, ".*", {git, "git@://github.com/basho/lager.git", "master"}}
+	 {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}}
 ]}.
 {sub_dirs, ["rel"]}.                          
 {edoc_opts,[{packages,false},{subpackages,false}]}.
