--- a/reltool.config
+++ b/reltool.config
@@ -6,6 +6,7 @@
         [
          kernel,
          stdlib,
+         lager,
          sasl,
          ftpserver
         ]},
@@ -24,6 +25,8 @@
        {app, kernel, [{incl_cond, include}]},
        {app, stdlib, [{incl_cond, include}]},                    
        {app, sasl, [{incl_cond, include}]},
+       {app, syntax_tools, [{incl_cond, include}]},
+       {app, compiler, [{incl_cond, include}]},
        {app, lager, [{incl_cond, include}]},
        {app, inets, [{incl_cond, include}]},
        {app, ftpserver, [{incl_cond, include}]}
